global serverless updates

--- a/global-serverless/web/index.css
+++ b/global-serverless/web/index.css
@@ -63,7 +63,10 @@
 }
 
 #list td {
-    border: 2px solid black;
+    border-top: 2px solid black;
+    border-bottom: 2px solid black;
+    border-left: none;
+    border-right: none;
     border-radius: 6px;
 }
 
